#action("build_cryptopp"){
# script = "make"
# outputs = ["$target_gen_dir/build_cryptopp.out"]
# args = ["-C", "../cryptopp/src/"] 
#}
executable("crypto") {
  sources = [                 
    "cpp/prime4standalone/prime_sieve.c", "cpp/crypto/main.cpp",
    "cpp/cryptolib/aes.cpp", 
    "cpp/cryptolib/ecc.cpp"
  ]
  include_dirs = ["cpp/prime4standalone"]
  deps = [":cryptopp"]
}
static_library("cryptopp"){
  sources = [
"cpp/cryptopp/src/3way.cpp",
"cpp/cryptopp/src/adhoc.cpp",
"cpp/cryptopp/src/adler32.cpp",
"cpp/cryptopp/src/algebra.cpp",
"cpp/cryptopp/src/algparam.cpp",
"cpp/cryptopp/src/arc4.cpp",
"cpp/cryptopp/src/aria.cpp",
# "cpp/cryptopp/src/aria_simd.cpp",
"cpp/cryptopp/src/ariatab.cpp",
"cpp/cryptopp/src/asn.cpp",
"cpp/cryptopp/src/authenc.cpp",
"cpp/cryptopp/src/base32.cpp",
"cpp/cryptopp/src/base64.cpp",
"cpp/cryptopp/src/basecode.cpp",
"cpp/cryptopp/src/bench1.cpp",
"cpp/cryptopp/src/bench2.cpp",
"cpp/cryptopp/src/bench3.cpp",
"cpp/cryptopp/src/bfinit.cpp",
#"cpp/cryptopp/src/blake2b_simd.cpp",
"cpp/cryptopp/src/blake2.cpp",
#"cpp/cryptopp/src/blake2s_simd.cpp",
"cpp/cryptopp/src/blowfish.cpp",
"cpp/cryptopp/src/blumshub.cpp",
"cpp/cryptopp/src/camellia.cpp",
"cpp/cryptopp/src/cast.cpp",
"cpp/cryptopp/src/casts.cpp",
"cpp/cryptopp/src/cbcmac.cpp",
"cpp/cryptopp/src/ccm.cpp",
#"cpp/cryptopp/src/chacha_avx.cpp",
"cpp/cryptopp/src/chacha.cpp",
#"cpp/cryptopp/src/chacha_simd.cpp",
"cpp/cryptopp/src/cham.cpp",
#"cpp/cryptopp/src/cham_simd.cpp",
"cpp/cryptopp/src/channels.cpp",
"cpp/cryptopp/src/cmac.cpp",
"cpp/cryptopp/src/cpu.cpp",
"cpp/cryptopp/src/crc.cpp",
#"cpp/cryptopp/src/crc_simd.cpp",
"cpp/cryptopp/src/cryptlib.cpp",
"cpp/cryptopp/src/darn.cpp",
"cpp/cryptopp/src/datatest.cpp",
"cpp/cryptopp/src/default.cpp",
"cpp/cryptopp/src/des.cpp",
"cpp/cryptopp/src/dessp.cpp",
"cpp/cryptopp/src/dh2.cpp",
"cpp/cryptopp/src/dh.cpp",
"cpp/cryptopp/src/dll.cpp",
"cpp/cryptopp/src/dlltest.cpp",
"cpp/cryptopp/src/donna_32.cpp",
"cpp/cryptopp/src/donna_64.cpp",
"cpp/cryptopp/src/donna_sse.cpp",
"cpp/cryptopp/src/dsa.cpp",
"cpp/cryptopp/src/eax.cpp",
"cpp/cryptopp/src/ec2n.cpp",
"cpp/cryptopp/src/eccrypto.cpp",
"cpp/cryptopp/src/ecp.cpp",
"cpp/cryptopp/src/elgamal.cpp",
"cpp/cryptopp/src/emsa2.cpp",
"cpp/cryptopp/src/eprecomp.cpp",
"cpp/cryptopp/src/esign.cpp",
"cpp/cryptopp/src/files.cpp",
"cpp/cryptopp/src/filters.cpp",
"cpp/cryptopp/src/fips140.cpp",
"cpp/cryptopp/src/fipsalgt.cpp",
"cpp/cryptopp/src/fipstest.cpp",
"cpp/cryptopp/src/gcm.cpp",
#"cpp/cryptopp/src/gcm_simd.cpp",
"cpp/cryptopp/src/gf2_32.cpp",
"cpp/cryptopp/src/gf256.cpp",
"cpp/cryptopp/src/gf2n.cpp",
"cpp/cryptopp/src/gfpcrypt.cpp",
"cpp/cryptopp/src/gost.cpp",
"cpp/cryptopp/src/gzip.cpp",
"cpp/cryptopp/src/hc128.cpp",
"cpp/cryptopp/src/hc256.cpp",
"cpp/cryptopp/src/hex.cpp",
"cpp/cryptopp/src/hight.cpp",
"cpp/cryptopp/src/hmac.cpp",
"cpp/cryptopp/src/hrtimer.cpp",
"cpp/cryptopp/src/ida.cpp",
"cpp/cryptopp/src/idea.cpp",
"cpp/cryptopp/src/integer.cpp",
"cpp/cryptopp/src/iterhash.cpp",
"cpp/cryptopp/src/kalyna.cpp",
"cpp/cryptopp/src/kalynatab.cpp",
"cpp/cryptopp/src/keccakc.cpp",
"cpp/cryptopp/src/keccak.cpp",
"cpp/cryptopp/src/lea.cpp",
#"cpp/cryptopp/src/lea_simd.cpp",
"cpp/cryptopp/src/luc.cpp",
"cpp/cryptopp/src/mars.cpp",
"cpp/cryptopp/src/marss.cpp",
"cpp/cryptopp/src/md2.cpp",
"cpp/cryptopp/src/md4.cpp",
"cpp/cryptopp/src/md5.cpp",
"cpp/cryptopp/src/misc.cpp",
"cpp/cryptopp/src/modes.cpp",
"cpp/cryptopp/src/mqueue.cpp",
"cpp/cryptopp/src/mqv.cpp",
"cpp/cryptopp/src/nbtheory.cpp",
#"cpp/cryptopp/src/neon_simd.cpp",
"cpp/cryptopp/src/oaep.cpp",
"cpp/cryptopp/src/osrng.cpp",
"cpp/cryptopp/src/padlkrng.cpp",
"cpp/cryptopp/src/panama.cpp",
"cpp/cryptopp/src/pch.cpp",
"cpp/cryptopp/src/pkcspad.cpp",
"cpp/cryptopp/src/poly1305.cpp",
"cpp/cryptopp/src/polynomi.cpp",
"cpp/cryptopp/src/ppc_power7.cpp",
"cpp/cryptopp/src/ppc_power8.cpp",
"cpp/cryptopp/src/ppc_power9.cpp",
#"cpp/cryptopp/src/ppc_simd.cpp",
"cpp/cryptopp/src/pssr.cpp",
"cpp/cryptopp/src/pubkey.cpp",
"cpp/cryptopp/src/queue.cpp",
"cpp/cryptopp/src/rabbit.cpp",
"cpp/cryptopp/src/rabin.cpp",
"cpp/cryptopp/src/randpool.cpp",
"cpp/cryptopp/src/rc2.cpp",
"cpp/cryptopp/src/rc5.cpp",
"cpp/cryptopp/src/rc6.cpp",
"cpp/cryptopp/src/rdrand.cpp",
"cpp/cryptopp/src/rdtables.cpp",
"cpp/cryptopp/src/regtest1.cpp",
"cpp/cryptopp/src/regtest2.cpp",
"cpp/cryptopp/src/regtest3.cpp",
"cpp/cryptopp/src/regtest4.cpp",
"cpp/cryptopp/src/rijndael.cpp",
#"cpp/cryptopp/src/rijndael_simd.cpp",
"cpp/cryptopp/src/ripemd.cpp",
"cpp/cryptopp/src/rng.cpp",
"cpp/cryptopp/src/rsa.cpp",
"cpp/cryptopp/src/rw.cpp",
"cpp/cryptopp/src/safer.cpp",
"cpp/cryptopp/src/salsa.cpp",
"cpp/cryptopp/src/scrypt.cpp",
"cpp/cryptopp/src/seal.cpp",
"cpp/cryptopp/src/seed.cpp",
"cpp/cryptopp/src/serpent.cpp",
"cpp/cryptopp/src/sha3.cpp",
"cpp/cryptopp/src/shacal2.cpp",
#"cpp/cryptopp/src/shacal2_simd.cpp",
"cpp/cryptopp/src/sha.cpp",
"cpp/cryptopp/src/sharkbox.cpp",
"cpp/cryptopp/src/shark.cpp",
#"cpp/cryptopp/src/sha_simd.cpp",
"cpp/cryptopp/src/simeck.cpp",
#"cpp/cryptopp/src/simeck_simd.cpp",
#"cpp/cryptopp/src/simon128_simd.cpp",
#"cpp/cryptopp/src/simon64_simd.cpp",
"cpp/cryptopp/src/simon.cpp",
"cpp/cryptopp/src/simple.cpp",
"cpp/cryptopp/src/skipjack.cpp",
"cpp/cryptopp/src/sm3.cpp",
"cpp/cryptopp/src/sm4.cpp",
#"cpp/cryptopp/src/sm4_simd.cpp",
"cpp/cryptopp/src/sosemanuk.cpp",
#"cpp/cryptopp/src/speck128_simd.cpp",
#"cpp/cryptopp/src/speck64_simd.cpp",
"cpp/cryptopp/src/speck.cpp",
"cpp/cryptopp/src/square.cpp",
"cpp/cryptopp/src/squaretb.cpp",
#"cpp/cryptopp/src/sse_simd.cpp",
"cpp/cryptopp/src/strciphr.cpp",
"cpp/cryptopp/src/tea.cpp",
"cpp/cryptopp/src/test.cpp",
"cpp/cryptopp/src/tftables.cpp",
"cpp/cryptopp/src/threefish.cpp",
"cpp/cryptopp/src/tiger.cpp",
"cpp/cryptopp/src/tigertab.cpp",
"cpp/cryptopp/src/ttmac.cpp",
"cpp/cryptopp/src/tweetnacl.cpp",
"cpp/cryptopp/src/twofish.cpp",
"cpp/cryptopp/src/validat0.cpp",
"cpp/cryptopp/src/validat10.cpp",
"cpp/cryptopp/src/validat1.cpp",
"cpp/cryptopp/src/validat2.cpp",
"cpp/cryptopp/src/validat3.cpp",
"cpp/cryptopp/src/validat4.cpp",
"cpp/cryptopp/src/validat5.cpp",
"cpp/cryptopp/src/validat6.cpp",
"cpp/cryptopp/src/validat7.cpp",
"cpp/cryptopp/src/validat8.cpp",
"cpp/cryptopp/src/validat9.cpp",
"cpp/cryptopp/src/vmac.cpp",
"cpp/cryptopp/src/wake.cpp",
"cpp/cryptopp/src/whrlpool.cpp",
"cpp/cryptopp/src/xed25519.cpp",
"cpp/cryptopp/src/xtr.cpp",
"cpp/cryptopp/src/xtrcrypt.cpp",
"cpp/cryptopp/src/zdeflate.cpp",
"cpp/cryptopp/src/zinflate.cpp",
"cpp/cryptopp/src/zlib.cpp",
]
}
